tests/diagnostics/catalog/snapshots/ir/IR0007.snap
error[IR0007]: IR_E_BRANCH_MISMATCH
 --> tests/diagnostics/catalog/sources/ir/IR0007.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0007
  = help: keep IR validation diagnostics structured and catalog-backed
